# afd_poll

./: Cargo.toml  azure-pipelines.yml
src/: event.rs  interests.rs  lib.rs  main.rs  ready.rs  selector.rs  tcp.rs
