[package]
name = "iocp-wrapper"
version = "0.1.0"
authors = ["FXTi <zjxiang1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = "0.3.1"
widestring = "0.4.0"
lazy_static = "1.3.0"
miow = "0.3.3"
libc = "0.2.58"

[dependencies.winapi]
version = "0.3.7"
features = [
  "ioapiset",
  "minwindef",
  "ntdef",
  "winsock2",
  "ntstatus",
  "winerror",
  "ws2def",
  "impl-default",
  "winerror",
]